--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "@angular/compiler": "8.2.7",
     "@angular/core": "8.2.7",
     "@angular/forms": "8.2.7",
+    "@angular/material": "^8.2.0",
     "@angular/platform-browser": "8.2.7",
     "@angular/platform-browser-dynamic": "8.2.7",
     "@angular/router": "8.2.7",
     "@datorama/akita": "^4.10.4",
     "@fortawesome/fontawesome-free": "5.11.2",
     "core-js": "2.6.8",
-    "primeicons": "2.0.0",
-    "primeng": "8.0.3",
     "rxjs": "6.5.3",
     "zone.js": "0.10.2"
   },
