--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "^8.2.7",
     "@angular/router": "^8.2.7",
     "@datorama/akita": "^4.10.4",
+    "@datorama/akita-ng-entity-service": "^1.0.3",
     "core-js": "~2.6.8",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.3",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.5",
+    "@angular-devkit/schematics-cli": "^0.803.5",
     "@angular/cli": "^8.3.5",
     "@angular/compiler-cli": "^8.2.7",
     "@angular/language-service": "^8.2.7",
